Сделаны круглые скил бары

--- a/bouncy/index.html
+++ b/bouncy/index.html
@@ -115,7 +115,17 @@
               <p>
                 quos dolores et quas molestias excepturi sint occaecati<br>cupiditate non provident, similique sunt in culpa qui<br>officia deserunt mollitia animi, id est laborum et do-<br>lorum fuga. </p>
             </div>
-            <div class="our-services-skills"><img src="img/ui.png" alt=""/><img src="img/ui.png" alt=""/><img src="img/ui.png" alt=""/>
+            <div class="our-services-skills">
+                <div class="pie p1">
+                  <p>80%</p>
+                </div>
+                <div class="pie p2">
+                    <p>50%</p>
+                </div>
+                <div class="pie p3">
+                    <p>30%</p>
+                </div>
+
             </div>
           </div>
         </div>
